--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,6 @@
     ],
     "require": {
       "psr/log": "~1.0",
-      "guzzlehttp/guzzle": "~4.0",
+      "guzzlehttp/guzzle": "~4.0"
     }
 }
