--- a/composer.json
+++ b/composer.json
@@ -11,5 +11,8 @@
     "require": {
       "psr/log": "~1.0",
       "guzzlehttp/guzzle": "~4.0"
+    },
+    "autoload": {
+        "psr-4": {"fullfatthings\\phpEpoqApi\\": "src/"}
     }
 }
