--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,6 @@
       "guzzlehttp/guzzle": "~4.0"
     },
     "autoload": {
-        "psr-4": {"fullfatthings\\phpEpoqApi\\": "src/"}
+        "psr-4": {"FullFatThings\\phpEpoqApi\\": "src/"}
     }
 }
